--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
     This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
+    the --base-href argument provided to flutter build.
   -->
   <base href="$FLUTTER_BASE_HREF">
 
@@ -40,7 +40,11 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script>
+<script>
+    window.flutterWebRenderer = "html";
+  </script>
+
+<script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
